# ros-exercise

./: .devcontainer.json  .gitignore  Dockerfile  README.md
config/: params.yaml
data/cov_est/: README
data/map/: CornerMap.pcd  README  trajectory.pcd
data/map/backup_map/: SurfMap.pcd
data/odo_sync/: README  odo_sync_recorded.txt
data/rosbag/: README
map/: GlobalMap.pcd  transformations.pcd
package/LIO-SAM-LO/: CMakeLists.txt  README.md  package.xml
package/LIO-SAM-LO/config/: params.yaml
package/LIO-SAM-LO/include/: utility.h
package/LIO-SAM-LO/launch/: run_localize.launch
package/LIO-SAM-LO/launch/include/: module_loam.launch  module_localize_only.launch  module_navsat.launch  module_robot_state_publisher.launch  module_rviz.launch
package/LIO-SAM-LO/launch/include/config/: rviz.rviz
package/LIO-SAM-LO/src/: featureExtraction.cpp  imageProjection.cpp  imuPreintegration.cpp  localizeOnly.cpp  mapOptmization.cpp
package/cov-est/: CMakeLists.txt  README.md  package.xml
package/cov-est/include/: CovEstNode.h
package/cov-est/launch/: cov_est.launch
package/cov-est/src/: CovEstNode.cpp  CovEstNode_main.cpp
package/odo-sync/: CMakeLists.txt  README.md  package.xml
package/odo-sync/include/: OdoSyncNode.h
package/odo-sync/launch/: odo_sync.launch
package/odo-sync/src/: OdoSyncNode.cpp  OdoSyncNode_main.cpp
patch/patch_liosam/: CHANGELOG.md  README.md  liosam_update.patch
scripts/: gem_gt_vs_lio_sam_lo.py  gem_teleop_keyboard.py
